[package]
name = "musbconv"
description = "Batch converter for audio files (uses ffmpeg)"
version = "0.1.0"
authors = ["Alexey Parfenov <zxed@alkatrazstudio.net>"]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/alkatrazstudio/musbconv"
repository = "https://github.com/alkatrazstudio/musbconv"
rust-version = "1.72.1"
keywords = ["audio", "converter", "music", "ffmpeg", "command-line"]
categories = ["multimedia::encoding", "command-line-utilities"]
publish = false

[dependencies]
clap = { version = "=4.4.6", features = ["derive", "string"] }
cuna = "=0.7.0"
handlebars = "=4.4.0"
lazy_static = "=1.4.0"
lexical-sort = "=0.3.1"
path-dedot = "=3.1.1"
rayon = "=1.8.0"
regex = "=1.9.6"
sanitize-filename = "=0.5.0"
serde = { version = "=1.0.188", features = ["derive"] }
serde_json = "=1.0.107"
shell-words = "=1.1.0"
which = "=4.4.2"

[build-dependencies]
built = { version = "=0.7.0", features = ["chrono", "git2"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
