[package]
name = "musbconv"
description = "Batch converter for audio files (uses ffmpeg)"
version = "1.0.0"
authors = ["Alexey Parfenov <zxed@alkatrazstudio.net>"]
edition = "2024"
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/alkatrazstudio/musbconv"
repository = "https://github.com/alkatrazstudio/musbconv"
rust-version = "1.91.1"
keywords = ["audio", "converter", "music", "ffmpeg", "command-line"]
categories = ["multimedia::encoding", "command-line-utilities"]
publish = false

[dependencies]
clap = { version = "=4.5.53", features = ["derive", "string"] }
cuna = "=0.7.0"
handlebars = "=6.3.2"
lexical-sort = "=0.3.1"
path-dedot = "=3.1.1"
rayon = "=1.11.0"
regex = "=1.12.2"
sanitize-filename = "=0.6.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
shell-words = "=1.1.0"
which = "=8.0.0"

[build-dependencies]
built = { version = "=0.8.0", features = ["chrono", "git2"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
